# src/main/java/api/poja/app/endpoint/rest/controller/PromotionController.java
@@ -5,11 +5,13 @@ import api.poja.app.model.Promotion;
 import api.poja.app.service.PromotionService;
 import jakarta.validation.Valid;
 import java.util.List;
+import java.util.UUID;
 import lombok.AllArgsConstructor;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.security.access.prepost.PreAuthorize;
 import org.springframework.web.bind.annotation.GetMapping;
+import org.springframework.web.bind.annotation.PathVariable;
 import org.springframework.web.bind.annotation.PostMapping;
 import org.springframework.web.bind.annotation.RequestBody;
 import org.springframework.web.bind.annotation.RequestMapping;
@@ -35,5 +37,13 @@ public class PromotionController {
   public ResponseEntity<Promotion> createPromotion(
       @Valid @RequestBody PromotionCreateRequest request) {
     return ResponseEntity.status(HttpStatus.CREATED).body(promotionService.create(request));
+  }
+
+  @PreAuthorize("hasRole('ADM')")
+  @PostMapping("/{id}/groups/{groupId}")
+  public ResponseEntity<Void> addGroupToPromotion(
+      @PathVariable UUID id, @PathVariable UUID groupId) {
+    promotionService.addGroup(id, groupId);
+    return ResponseEntity.status(HttpStatus.CREATED).build();
   }
 }
