# src/main/java/api/poja/app/endpoint/rest/dto/PromoteTeacherRequest.java
@@ -1,0 +1,5 @@
+package api.poja.app.endpoint.rest.dto;
+
+import jakarta.validation.constraints.NotBlank;
+
+public record PromoteTeacherRequest(@NotBlank String firstName, @NotBlank String lastName) {}
